--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="normalize.css">
-  <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="grid-style.css" rel="stylesheet" type="text/css">
   <meta name="theme-color" content="#fafafa">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,17 +28,17 @@
 
 <main>
 
+<div class="long-vertical">
 	<div class="long-vertical-1"></div>
 	<div class="long-vertical-2"></div>
 	<div class="long-vertical-3"></div>
 	<div class="long-vertical-4"></div>
-	<div class=""></div>
 	<div class="long-vertical-5"></div>
 	<div class="long-vertical-6"></div>
 	<div class="long-vertical-7"></div>
 	<div class="long-vertical-8"></div>
 	<div class="long-vertical-9"></div>
-
+</div>
 
 </main>
 
