Complete (except non-responsive)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="normalize.css">
-  <link href="grid-style.css" rel="stylesheet" type="text/css">
+  <link href="style.css" rel="stylesheet" type="text/css">
   <meta name="theme-color" content="#fafafa">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,7 +28,8 @@
 
 <main>
 
-<div class="long-vertical">
+<div class="container">
+
 	<div class="long-vertical-1"></div>
 	<div class="long-vertical-2"></div>
 	<div class="long-vertical-3"></div>
@@ -38,7 +39,40 @@
 	<div class="long-vertical-7"></div>
 	<div class="long-vertical-8"></div>
 	<div class="long-vertical-9"></div>
+  <div class="long-vertical-10"></div>
+
+  <div class="short-vertical-1"></div>
+  <div class="short-vertical-2"></div>
+  <div class="short-vertical-3"></div>
+  <div class="short-vertical-4"></div>
+  <div class="short-vertical-5"></div>
+  <div class="short-vertical-6"></div>
+  <div class="short-vertical-7"></div>
+  <div class="short-vertical-8"></div>
+  <div class="short-vertical-9"></div>
+  <div class="short-vertical-10"></div>
+  <div class="short-vertical-11"></div>
+  <div class="short-vertical-12"></div>
+  <div class="short-vertical-13"></div>
+  <div class="short-vertical-14"></div>
+
+  <div class="horizontal-1"></div>
+  <div class="horizontal-2"></div>
+  <div class="horizontal-3"></div>
+  <div class="horizontal-4"></div>
+  <div class="horizontal-5"></div>
+  <div class="horizontal-6"></div>
+  <div class="horizontal-7"></div>
+  <div class="horizontal-8"></div>
+  <div class="horizontal-9"></div>
+  <div class="horizontal-10"></div>
+  <div class="horizontal-11"></div>
+  <div class="horizontal-12"></div>
+
 </div>
+
+<h1>Sol LeWitt</h1>
+<a href="https://www.wnpr.org/post/art-idea-look-sol-lewitt"><h2><i>Wall Drawing #370<br>1982</i></h2></a>
 
 </main>
 
